# uncertainty_estimation

./: .gitignore  config.yaml  pyproject.toml
checkpoints/: best.pth  epoch_0045.pth  epoch_0050.pth
configs/: base.yaml  base_kitti.yaml
configs/dataset/: sss.yaml  tartanair.yaml
configs/hydra/launcher/: sbatch.yaml
configs/hydra/sweep/: sbatch.yaml
configs/training/: stereo_ssl.yaml
orb_crash_dump/: left_img.npy  lkps.npy  meta.txt  right_img.npy  rkps.npy
outputs/debug/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs/viz/.hydra/: config.yaml  hydra.yaml  overrides.yaml
scripts/: analyze_residuals.py  diagnose_pipeline.py  plot_training_curves.py  train_stereo_cov.py  viz.py
scripts/debug/: diagnose_pipeline.py  probe_findfundamentalmat.py  repro_orb_crash.py
scripts/eval/: analyze_residuals.ipynb  analyze_residuals.py  build_best_epoch_table.py  collect_residuals.py  empirical_residual_cov.py  plot_one_cell.py  plot_stereo_ablation.py  plot_stereo_ablation_arrows.py  plot_training_curves.py  visualize_predictions.py
scripts/jobs/: launch_jobs.sh  launch_stereo_experiments.sh  slurm_job.sh
src/uncertainty_estimation/: config.py  pipeline.py
src/uncertainty_estimation/backend/: vo_graph.py
src/uncertainty_estimation/data/: __init__.py  eth3d.py  kitti.py  tartanair.py  thales.py
src/uncertainty_estimation/datasets/: common.py
src/uncertainty_estimation/evaluation/: metrics.py
src/uncertainty_estimation/frontend/: lk.py  orb.py  pose.py  superpoint_lg.py  tracking.py
src/uncertainty_estimation/geometry/: __init__.py  bearings.py  projections.py  stereo.py
src/uncertainty_estimation/matching/: orb.py
src/uncertainty_estimation/math/: common.py  projections.py
src/uncertainty_estimation/models/: factory.py  full_model.py  transforms.py  (+1 more)
wandb/: settings
(+23 files in other folders)
