[project]
name = "uncertainty-estimation"
version = "0.1.0"
description = "3D point cloud uncertainty estimation from multi-view feature matching"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "opencv-python",
    "open3d",
    "matplotlib",
    "scipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uncertainty_estimation"]
