[project]
name = "uncertainty-estimation"
version = "0.1.0"
description = "3D point cloud uncertainty estimation from multi-view feature matching"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "numpy",
    "opencv-python",
    "open3d",
    "matplotlib",
    "scipy",
    "gtsam",
    "torch",
    "torchvision",
    "wandb",
    "omegaconf",
    "hydra-core",
    "pyyaml",
    "scikit-image",
    "tensorboard",
    "hydra-submitit-launcher>=1.2.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/uncertainty_estimation"]
